Initial map configuration

--- a/codesign/.gitignore
+++ b/codesign/.gitignore
@@ -17,6 +17,10 @@ expo-env.d.ts
 *.key
 *.mobileprovision
 
+# Native local development build files
+/ios
+/android
+
 # Metro
 .metro-health-check*
 
@@ -31,6 +35,7 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
