--- a/codesign/app.json
+++ b/codesign/app.json
@@ -42,6 +42,12 @@
         {
           "RNMapboxMapsVersion": "11.8.0"
         }
+      ],
+      [
+        "expo-dev-launcher",
+        {
+          "launchMode": "most-recent"
+        }
       ]
     ],
     "experiments": {
