--- a/codesign/package.json
+++ b/codesign/package.json
@@ -16,7 +16,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.1.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@rnmapbox/maps": "^10.1.33",
@@ -26,6 +28,7 @@
     "expo-dev-client": "~5.0.8",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
@@ -44,8 +47,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-refresh": "^0.16.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-refresh": "^0.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
