--- a/codesign/package.json
+++ b/codesign/package.json
@@ -10,7 +10,15 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
+    "lint-staged": "lint-staged",
+    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
+    "prepare": "cd .. && husky codesign/.husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint",
+      "prettier --write"
+    ]
   },
   "jest": {
     "preset": "jest-expo"
@@ -61,8 +69,10 @@
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
