--- a/codesign/package.json
+++ b/codesign/package.json
@@ -16,7 +16,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint",
+      "eslint --max-warnings=0",
       "prettier --write"
     ]
   },
