Add USE_MIRAGE flag so it can be turned off when using backend

--- a/codesign/package.json
+++ b/codesign/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "ios": "expo run:ios --device",
+    "ios": "USE_MIRAGE=true expo run:ios --device",
     "clean-ios": "expo install && npx expo prebuild --clean",
     "web": "expo start --web",
     "test": "jest --watchAll",
