--- a/codesign/package.json
+++ b/codesign/package.json
@@ -39,9 +39,11 @@
     "expo-dev-client": "~5.0.8",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.5",
+    "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
@@ -59,8 +61,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-refresh": "^0.16.0",
-    "expo-media-library": "~17.0.6"
+    "react-refresh": "^0.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
