--- a/codesign/package.json
+++ b/codesign/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
@@ -72,6 +73,7 @@
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-testing-library": "^7.1.1",
     "husky": "^9.1.7",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
