--- a/codesign/package.json
+++ b/codesign/package.json
@@ -53,7 +53,7 @@
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.5",
+    "react-native": "^0.76.9",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
