--- a/codesign/package.json
+++ b/codesign/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@faker-js/faker": "^9.6.0",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
