Add doc explaining how to run Maestro

--- a/codesign/package.json
+++ b/codesign/package.json
@@ -12,7 +12,8 @@
     "lint": "expo lint",
     "lint-staged": "lint-staged",
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
-    "prepare": "cd .. && husky codesign/.husky"
+    "prepare": "cd .. && husky codesign/.husky",
+    "e2e": "USE_MIRAGE=true expo run:ios --device 'iPhone 15'"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
