Designate codesign/ subfolder as location to run commands

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./codesign
 
       - name: Run tests
         run: npm test
+        working-directory: ./codesign
