Default test command watches changes, use different command that exits when tests complete

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,5 +18,5 @@ jobs:
         working-directory: ./codesign
 
       - name: Run tests
-        run: npm test
+        run: npm run test-quick
         working-directory: ./codesign
