--- a/codesign/app.json
+++ b/codesign/app.json
@@ -11,7 +11,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.tamids.urbanailab.codesign",
+      "bundleIdentifier": "com.urbanailab.codesign",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
@@ -23,9 +23,7 @@
         "permissions": [
           "ACCESS_FINE_LOCATION",
           "ACCESS_COARSE_LOCATION"
-        ]
-      },
-      "package": "com.tamids.urbanailab.codesign"
+      "package": "com.urbanailab.codesign"
     },
     "web": {
       "bundler": "metro",
