Resolve expo doctor errors

--- a/codesign/app.json
+++ b/codesign/app.json
@@ -19,10 +19,12 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff",
-        "permissions": [
+        "backgroundColor": "#ffffff"
+      },
+      "permissions": [
           "ACCESS_FINE_LOCATION",
           "ACCESS_COARSE_LOCATION"
+      ],
       "package": "com.urbanailab.codesign"
     },
     "web": {
