--- a/codesign/package.json
+++ b/codesign/package.json
@@ -11,7 +11,7 @@
     "test": "jest --watchAll",
     "test-quick": "jest",
     "lint": "expo lint",
-    "lint-staged": "lint-staged",
+    "lint-staged-files": "lint-staged",
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
     "prepare": "cd .. && husky codesign/.husky"
   },
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@devicecloud.dev/dcd": "^3.6.7",
     "@faker-js/faker": "^9.6.0",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
