--- a/.github/workflows/build-for-e2e.yml
+++ b/.github/workflows/build-for-e2e.yml
@@ -15,11 +15,15 @@ jobs:
       - name: Check out CoDesign repository
         uses: actions/checkout@v4
 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
       - name: Setup EAS with Expo Github Action
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
-          packager: npm
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
@@ -27,7 +31,7 @@ jobs:
         working-directory: ./codesign
 
       - name: Build Codesign on EAS Platform
-        run: eas build --non-interactive --platform ios --profile preview-simulator
+        run: eas build --platform ios --profile preview-simulator
         working-directory: ./codesign
 
   download_artifact:
