--- a/codesign/e2e/create-and-view-report.yaml
+++ b/codesign/e2e/create-and-view-report.yaml
@@ -66,7 +66,8 @@ appId: com.urbanailab.codesign
 # When select a photo
 # Cannot use the Photo regex selector so use screen location as a workaround
 - tapOn:
-    point: "50%,38%"
+    text: Photo,.*
+    index: 0
 
 # Then one uploaded image and two placeholders should be visible
 - waitForAnimationToEnd
