--- a/codesign/app.json
+++ b/codesign/app.json
@@ -11,7 +11,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.urbanailab.codesign"
+      "bundleIdentifier": "com.urbanailab.codesign",
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
