--- a/.github/workflows/build-for-e2e.yml
+++ b/.github/workflows/build-for-e2e.yml
@@ -31,6 +31,7 @@ jobs:
 
   submit-e2e:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Install Act dependencies
         if: ${{ env.ACT }}
