--- a/.github/workflows/build-for-e2e.yml
+++ b/.github/workflows/build-for-e2e.yml
@@ -7,11 +7,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Install git
-        run: |
-          apt-get update
-          apt-get install -y git
-
       - name: Check out CoDesign repository
         uses: actions/checkout@v4
 
@@ -36,6 +31,7 @@ jobs:
 
   submit-e2e:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Install Act dependencies
         if: ${{ env.ACT }}
